k8Manifest/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweettrend-ingress
  namespace: webapp
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service: 
          name: tweettrend-svc
          port: 
           number: 80
